avoiding truncation of parameter names in lists

--- a/resources/css/doc.css
+++ b/resources/css/doc.css
@@ -21,3 +21,14 @@ table[class="kwic"] {
     border-collapse: separate;
     border-spacing: 0 .5em;
 }
+
+section dl.dl-horizontal dt {
+    overflow-x:inherit;
+    overflow-y:inherit;
+    clear:inherit;
+    float:inherit;
+}
+
+section dl.dl-horizontal dd {
+    margin-left:2em !important;
+    }
